Fix footer spacings

--- a/packages/site/src/components/Footer/styles.scss
+++ b/packages/site/src/components/Footer/styles.scss
@@ -5,5 +5,5 @@
   gap: spacing(medium);
   align-items: center;
   justify-content: center;
-  margin-bottom: spacing(6xlarge);
+  margin: spacing(6xlarge) 0;
 }
