--- a/packages/site/src/routes/Landing/styles.scss
+++ b/packages/site/src/routes/Landing/styles.scss
@@ -84,7 +84,7 @@
     display: flex;
     gap: spacing(normal);
     flex-direction: row;
-    margin: spacing(2xlarge) 0;
+    margin-top: spacing(2xlarge);
 
     &_card {
       display: flex;
